<resources>
    <string name="app_name">DeliverAll!</string>
    <string name="app_in_name">DeliverAll!</string>
    <string name="app_after_name">Авторизация</string>
    <string name="app_bottom_name">Войдите в свой аккаунт</string>
    <string name="signIn">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="google_client_id">620819643210-mnia6tc700ad2nbvhgf38gt803cddqgj.apps.googleusercontent.com</string>
    <string name="web_client_id">620819643210-uo79t0c356t625pl1n0ueq8861b02ess.apps.googleusercontent.com</string>



</resources>